# Basic-Digital-Wallet-API

./: .env.sample  .gitignore  pyproject.toml
digital_wallet/: config.py  main.py  security.py
digital_wallet/models/: __init__.py  db_models.py  item.py  merchant.py  transaction.py  user.py  wallet.py
digital_wallet/routers/: __init__.py  authentication.py  items.py  merchants.py  sqlmodel_engine.py  transactions.py  users.py  wallets.py
scripts/: initial-db.py  run-api.bat
tests/: conftest.py  test_items.py  test_merchant.py
