[tool.poetry]
name = "digital-wallet"
version = "0.1.0"
description = ""
authors = ["Muhammadyohan Kachey <6410110421@email.psu.ac.th>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
sqlmodel = "^0.0.21"
pg8000 = "^1.31.2"
uvicorn = "^0.30.4"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.24.0"
locust = "^2.31.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
